--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vet-appointments",
+  "homepage": "https://movgto.github.io/vet-citas-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
